added1st section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,29 @@
             <h3 class="banner-greeting">Happy New Year</h3>
             <h2 class="banner-title">New Year Party <br> Celebration</h2>
         </div>
-        
+        <div class="header-ad">
+            <h2 class="ad-sale-range">65% OFF</h2>
+            <h5 class="ad-description">OUR HOLIDAY DEALS ARE BETTER</h5>
+            <h3 class="ad-info">ALL CATEGORIES</h3>
+            <div class="ad-pic">
+                <img src="resources/New Year Photo.png" alt="">
+            </div>
+        </div>
     </header>
+    <main>
+        <section class="first-sec">
+            <div class="welcome">
+                <h2 class="welcome-title">Welcome to <br>midnight party</h2>
+                <p class="welcome-description">
+                    Put on your most dazzling attire, grab your virtual passport to this nocturnal celebration, and get ready to experience a night like no other. Welcome to the 'Midnight Party'—where the night comes alive, and memories are made to last a lifetime."
+                </p>
+                <h5 class="welcome-join">JOIN NOW</h5>
+            </div>
+            <div class="welcome-pic">
+                <img src="resources/Group 70.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
