--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                 <img src="resources/Group 70.png" alt="">
             </div>
         </section>
+        <section class="venue">
+            <div class="venue-details">
+                <h4>Place: New Park Hotel <br>
+                    Date: 31 December Night 2023 <br>
+                    Time: Evening 7.30 pm to 12.30 am <br>
+                </h4>
+            </div>
+            <button class="join-btn">join now</button>
+        </section>
     </main>
 </body>
 
