added third section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
             </div>
             <button class="join-btn">join now</button>
         </section>
+        <section class="third-sec">
+            <div class="offer-deal">
+                <h4 class="offer-intro">NEW BEST OFFER</h4>
+                <h3 class="offer-declaration">Coming Soon</h3>
+                <p class="description">
+                    Save the date for the grand launch of our upcoming offer! Don't miss out on the chance to revamp your collection that radiate sophistication and charm.
+                </p>
+            </div>
+            <div class="offer-deal-pic">
+                <img src="resources/Ellipse 1.png" alt="">
+            </div>
+            <div class="offer-deal-date">
+                <h3 class="new-year">2024</h3>
+                <p class="description">
+                    May this New Year bring you endless opportunities to shine, and may your style be as radiant as your spirit.
+                </p>
+                <img src="resources/Group 96.png" alt="" class="new-year-pic">
+            </div>
+        </section>
     </main>
 </body>
 
