added fifth section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <div class="welcome">
                 <h2 class="welcome-title">Welcome to <br>midnight party</h2>
                 <p class="welcome-description">
-                    Put on your most dazzling attire, grab your virtual passport to this nocturnal celebration, and get ready to experience a night like no other. Welcome to the 'Midnight Party'—where the night comes alive, and memories are made to last a lifetime."
+                    Put on your most dazzling attire, grab your virtual passport to this nocturnal celebration, and get
+                    ready to experience a night like no other. Welcome to the 'Midnight Party'—where the night comes
+                    alive, and memories are made to last a lifetime."
                 </p>
                 <h5 class="welcome-join">JOIN NOW</h5>
             </div>
@@ -60,7 +62,8 @@
                 <h4 class="offer-intro">NEW BEST OFFER</h4>
                 <h3 class="offer-declaration">Coming Soon</h3>
                 <p class="description">
-                    Save the date for the grand launch of our upcoming offer! Don't miss out on the chance to revamp your collection that radiate sophistication and charm.
+                    Save the date for the grand launch of our upcoming offer! Don't miss out on the chance to revamp
+                    your collection that radiate sophistication and charm.
                 </p>
             </div>
             <div class="offer-deal-pic">
@@ -69,11 +72,53 @@
             <div class="offer-deal-date">
                 <h3 class="new-year">2024</h3>
                 <p class="description">
-                    May this New Year bring you endless opportunities to shine, and may your style be as radiant as your spirit.
+                    May this New Year bring you endless opportunities to shine, and may your style be as radiant as your
+                    spirit.
                 </p>
                 <img src="resources/Group 96.png" alt="" class="new-year-pic">
             </div>
         </section>
+        <section class="fourth-section">
+            <div class="sale">
+                <h5 class="sale-intro">WHAT IS FUNCTIONAL</h5>
+                <h2 class="sale-title"><span style="color: #F00;">Holidays</span> Sale 50%</h2>
+                <p class="description">
+                    Brace yourself for exclusive discounts that will make updating your wardrobe a joyous affair. Our
+                    upcoming offer is not just an opportunity to shop; it's a chance to indulge in the luxury of
+                    high-quality fashion without breaking the bank.
+                </p>
+            </div>
+            <div class="sale-pics">
+                <div class="gift-box">
+                    <img src="resources/Group 75.png" alt="">
+                </div>
+                <div class="discount">
+                    <img src="resources/Group 44.png" alt="">
+                </div>
+                <!-- <div class="girl-pic">
+                    <img src="resources/Rectangle 1.png" alt="">
+                </div> -->
+            </div>
+        </section>
+        <section class="fifth-sec">
+            <div class="page-portfolio">
+                <h5 class="page-portfolio-intro">THE BEST GIFTS</h5>
+                <h4 class="page-portfolio-title">Our Awesome Portfolio</h4>
+                <p class="description">
+                    Our Products are more than just commodities; they are a testament to the meticulous craftsmanship
+                    and unwavering dedication that goes into each creation. We believe in quality, infusing every piece
+                    with a touch of our products.
+                </p>
+            </div>
+            <div class="portfolio-pics">
+                    <img src="resources/Rectangle 3.png" alt="">
+                    <img src="resources/Rectangle 4.png" alt="">
+                    <img src="resources/Rectangle 5.png" alt="">
+                    <img src="resources/Rectangle 6.png" alt="">
+                    <img src="resources/Rectangle 7.png" alt="">
+                    <img src="resources/Rectangle 8.png" alt="">
+            </div>
+        </section> 
     </main>
 </body>
 
