last section added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,23 @@
                     <img src="resources/Rectangle 7.png" alt="">
                     <img src="resources/Rectangle 8.png" alt="">
             </div>
+        </section>
+        <section class="last-section">
+            <div class="subscriber">
+                <div class="subscriber-icon">
+                    <img src="resources/Group 61.png" alt="">
+                </div>
+                <h3 class="subscriber-title">Subscribe Newsletter</h3>
+                <p class="description">
+                    Join us in this journey of our page. Explore our brand and discover the embodiment of [Your Brand Values]. Stay with us as we continue to redefine our brand and invite you to be a part of our story.
+                </p>
+            </div>
+            <div class="subscriber-btn">
+                <div class="email">
+                    <input type="email" placeholder="user@gmail.com" >
+                    <button class="subs-btn" type="submit">Subscribe</button>
+                </div>
+            </div>
         </section> 
     </main>
 </body>
