--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                     <img src="resources/Group 75.png" alt="">
                 </div>
                 <div class="discount">
-                    <img src="resources/Group 44.png" alt="">
+                    <img class="img1" src="resources/Group 44.png" alt="">
+                    <img src="resources/Rectangle 1.png" alt="">
                 </div>
                 <!-- <div class="girl-pic">
                     <img src="resources/Rectangle 1.png" alt="">
@@ -137,6 +138,9 @@
             </div>
         </section> 
     </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
