--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 </p>
             </div>
             <div class="portfolio-pics">
-                    <img src="resources/Rectangle 3.png" alt="">
-                    <img src="resources/Rectangle 4.png" alt="">
-                    <img src="resources/Rectangle 5.png" alt="">
-                    <img src="resources/Rectangle 6.png" alt="">
-                    <img src="resources/Rectangle 7.png" alt="">
-                    <img src="resources/Rectangle 8.png" alt="">
+                <img src="resources/Rectangle 3.png" alt="">
+                <img src="resources/Rectangle 4.png" alt="">
+                <img src="resources/Rectangle 5.png" alt="">
+                <img src="resources/Rectangle 6.png" alt="">
+                <img src="resources/Rectangle 7.png" alt="">
+                <img src="resources/Rectangle 8.png" alt="">
             </div>
         </section>
         <section class="last-section">
@@ -127,19 +127,42 @@
                 </div>
                 <h3 class="subscriber-title">Subscribe Newsletter</h3>
                 <p class="description">
-                    Join us in this journey of our page. Explore our brand and discover the embodiment of [Your Brand Values]. Stay with us as we continue to redefine our brand and invite you to be a part of our story.
+                    Join us in this journey of our page. Explore our brand and discover the embodiment of [Your Brand
+                    Values]. Stay with us as we continue to redefine our brand and invite you to be a part of our story.
                 </p>
             </div>
             <div class="subscriber-btn">
                 <div class="email">
-                    <input type="email" placeholder="user@gmail.com" >
+                    <input type="email" placeholder="user@gmail.com">
                     <button class="subs-btn" type="submit">Subscribe</button>
                 </div>
             </div>
-        </section> 
+        </section>
     </main>
-    <footer>
-        
+    <footer class="footer-info">
+        <div class="contact-details">
+            <div class="address">
+                <h5 class="text">44, Big Building Roosevelt Street <br>
+                    Beach Gardens Florida 33410</h5>
+            </div>
+            <div class="contact-info">
+                <h5 class="text">+00 123 584 124</h5>
+                <h5 class="text">www.website.com</h5>
+
+            </div>
+        </div>
+        <hr class="decor-line">
+        <div class="social-links">
+            <img src="resources/Facebook.png" alt="">
+            <img src="resources/Instagram.png" alt="">
+            <img src="resources/Twitter.png" alt="">
+            <img src="resources/Linkedin.png" alt="">
+        </div>
+        <hr class="decor-line">
+        <div class="end">
+            <h5 id="end-left" class="text">2017, All Rights Reserved.</h5>
+            <h5 id="end-right" class="text">Unsubscribe</h5>
+        </div>
     </footer>
 </body>
 
