--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </section>
         <section class="venue">
             <div class="venue-details">
-                <h4>Place: New Park Hotel <br>
-                    Date: 31 December Night 2023 <br>
-                    Time: Evening 7.30 pm to 12.30 am <br>
+                <h4><span style="color: #F00;">Place:</span> New Park Hotel <br>
+                    <span style="color: #F00;">Date:</span> 31 December Night 2023 <br>
+                    <span style="color: #F00;">Time:</span> Evening 7.30 pm to 12.30 am <br>
                 </h4>
             </div>
             <button class="join-btn">join now</button>
