--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
                 </div>
                 <h3 class="subscriber-title">Subscribe Newsletter</h3>
                 <p class="description">
-                    Join us in this journey of our page. Explore our brand and discover the embodiment of [Your Brand
-                    Values]. Stay with us as we continue to redefine our brand and invite you to be a part of our story.
+                    Join us in this journey of our page. Explore our brand and discover the embodiment ofour product. Stay with us as we continue to redefine our brand and invite you to be a part of our story.
                 </p>
             </div>
             <div class="subscriber-btn">
